--- a/Admin_Panel/src/app/containers/default-layout/default-footer/default-footer.component.html
+++ b/Admin_Panel/src/app/containers/default-layout/default-footer/default-footer.component.html
@@ -8,13 +8,13 @@
 -->
 <!--<c-footer>-->
 <div>
-  <a href="https://codecanyon.net/user/initappz/portfolio" target="_blank">Initappz</a>
-  <span> &copy; {{date}} initappz</span>
+  <a href="https://washzambia.com" target="_blank">Wash Landry Zambia</a>
+  <span> &copy; {{date}} Wash Laundry.</span>
 </div>
 <div class="ms-auto">
   Powered by
-  <a href="https://codecanyon.net/user/initappz/portfolio" target="_blank">
-    <span> Initappz</span>
+  <a href="https://rankersbox.com" target="_blank">
+    <span> Rankers Box Limited</span>
   </a>
 </div>
 <!--</c-footer>-->
